Fix message spacing

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -34,7 +34,9 @@ body {
 
 /* Messages */
 .messages {
-  padding-top: 20px;
+  .alert {
+    margin-top: 20px;
+  }
 }
 
 /* Panels */
